--- a/uv/themes/uv-en-GB-theme/css/uv-seadragon-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-seadragon-extension/theme.css
@@ -5,84 +5,98 @@
   width: 470px;
   padding: 0 0 30px 8px;
 }
-#app .overlay.embed .middle textarea.code {
+#app .overlay.embed .middle .firstRow {
+  overflow: hidden;
+}
+#app .overlay.embed .middle .firstRow .leftCol {
+  float: left;
+}
+#app .overlay.embed .middle .firstRow .leftCol img.share {
+  margin: 5px 0 5px 0;
+  width: 50px;
+  height: 50px;
+}
+#app .overlay.embed .middle .firstRow .rightCol {
+  float: right;
+}
+#app .overlay.embed .middle .secondRow textarea.code {
   width: 100%;
   height: 90px;
   background: #efefef;
   border: 1px solid #9a9a9a;
   font-size: 11px;
 }
-#app .overlay.embed .middle .sizes {
+#app .overlay.embed .middle .secondRow .sizes {
   height: 105px;
   margin: 10px 0 0 0;
 }
-#app .overlay.embed .middle .sizes p {
+#app .overlay.embed .middle .secondRow .sizes p {
   margin: 5px 0 0 0;
   padding: 0;
   font-size: 12px;
   text-align: center;
 }
-#app .overlay.embed .middle .size {
+#app .overlay.embed .middle .secondRow .size {
   border: 1px solid #9a9a9a;
   float: left;
   margin: 0 10px 0 0;
 }
-#app .overlay.embed .middle .size.selected {
+#app .overlay.embed .middle .secondRow .size.selected {
   border: 1px solid #14a4c3;
   background: #7eddf2;
 }
-#app .overlay.embed .middle .size.selected p {
+#app .overlay.embed .middle .secondRow .size.selected p {
   font-weight: bold;
 }
-#app .overlay.embed .middle .size.selected .box {
+#app .overlay.embed .middle .secondRow .size.selected .box {
   background: #fff;
 }
-#app .overlay.embed .middle .size .box {
+#app .overlay.embed .middle .secondRow .size .box {
   background: #CCCCCC;
   margin: 5px 10px 10px 10px;
 }
-#app .overlay.embed .middle .size.small {
+#app .overlay.embed .middle .secondRow .size.small {
   height: 80px;
   width: 80px;
   cursor: pointer;
 }
-#app .overlay.embed .middle .size.small .box {
+#app .overlay.embed .middle .secondRow .size.small .box {
   height: 45px;
 }
-#app .overlay.embed .middle .size.medium {
+#app .overlay.embed .middle .secondRow .size.medium {
   height: 90px;
   width: 90px;
   cursor: pointer;
 }
-#app .overlay.embed .middle .size.medium .box {
+#app .overlay.embed .middle .secondRow .size.medium .box {
   height: 55px;
 }
-#app .overlay.embed .middle .size.large {
+#app .overlay.embed .middle .secondRow .size.large {
   height: 100px;
   width: 100px;
   cursor: pointer;
 }
-#app .overlay.embed .middle .size.large .box {
+#app .overlay.embed .middle .secondRow .size.large .box {
   height: 65px;
 }
-#app .overlay.embed .middle .size.custom {
+#app .overlay.embed .middle .secondRow .size.custom {
   width: 140px;
   height: 100px;
   margin: 0;
 }
-#app .overlay.embed .middle .size.custom p {
+#app .overlay.embed .middle .secondRow .size.custom p {
   margin: 12px 0 0 0;
 }
-#app .overlay.embed .middle .size.custom .wrap {
+#app .overlay.embed .middle .secondRow .size.custom .wrap {
   width: 135px;
   margin: 10px 0 0 15px;
   padding: 0;
   max-width: none;
 }
-#app .overlay.embed .middle .size.custom .wrap .height {
+#app .overlay.embed .middle .secondRow .size.custom .wrap .height {
   margin: 5px 0 0 0;
 }
-#app .overlay.embed .middle .size.custom label {
+#app .overlay.embed .middle .secondRow .size.custom label {
   margin: 0;
   padding: 0 5px 0 0;
   display: inline-block;
@@ -93,7 +107,7 @@
   font-size: 11px;
   width: 35px;
 }
-#app .overlay.embed .middle .size.custom input {
+#app .overlay.embed .middle .secondRow .size.custom input {
   width: 50px;
   line-height: 12px;
   height: 18px;
@@ -102,7 +116,7 @@
   padding: 0;
   font-size: 11px;
 }
-#app .overlay.embed .middle .size.custom span {
+#app .overlay.embed .middle .secondRow .size.custom span {
   margin: 0;
   padding: 0 0 0 5px;
   display: inline-block;
@@ -2077,7 +2091,7 @@ input[type=range]:focus::-ms-fill-upper {
   margin-right: 15px;
 }
 #app .footerPanel .options a.embed {
-  background-image: url('../../img/uv-shared-module/embed.png');
+  background-image: url('../../img/uv-shared-module/share.png');
   background-repeat: no-repeat;
   height: 21px;
   line-height: 21px;
@@ -2148,6 +2162,7 @@ input[type=range]:focus::-ms-fill-upper {
   padding-right: 30px;
   padding-left: 10px;
   line-height: 22px;
+  min-width: 25px;
   float: right;
   margin-right: 0;
 }
@@ -2170,6 +2185,7 @@ input[type=range]:focus::-ms-fill-upper {
   padding-right: 30px;
   padding-left: 10px;
   line-height: 22px;
+  min-width: 25px;
   float: right;
   margin-right: 0;
 }
@@ -2268,25 +2284,18 @@ input[type=range]:focus::-ms-fill-upper {
   overflow: auto;
 }
 #app .overlay .top .close {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
   background-image: url('../../img/uv-shared-module/close.png');
-  background-repeat: no-repeat;
+  width: 24px;
   height: 24px;
-  line-height: 24px;
-  cursor: pointer;
-  color: #fff;
-  text-decoration: none;
-  background-position: right center;
-  padding-right: 34px;
-  padding-left: 10px;
   float: right;
-  background-color: #010101;
-}
-#app .overlay .top .close:link,
-#app .overlay .top .close:visited,
-#app .overlay .top .close:hover,
-#app .overlay .top .close:active {
-  color: #fff;
-  text-decoration: none;
+  background-color: #14a4c3;
 }
 #app .overlay .middle {
   background: #fff;
