--- a/uv/themes/uv-cy-GB-theme/css/uv-virtex-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-virtex-extension/theme.css
@@ -528,15 +528,20 @@
 #app .rightPanel .main .items {
   padding: 0 10px 20px 10px;
 }
+#app .rightPanel .main .items .item {
+  padding: 0;
+  margin: 0 0 20px 0;
+}
 #app .rightPanel .main .items .item .header {
   color: #9a9a9a;
+  border-bottom: 1px solid #343434;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
 }
 #app .rightPanel .main .items .item .text {
   color: #fff;
-  margin: 5px 10px 15px 0;
+  margin: 5px 10px 0 0;
   overflow: hidden;
   word-wrap: break-word;
 }
@@ -1858,7 +1863,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 18px;
   font-weight: bold;
   margin: 15px 0px 0px 0px;
-  padding: 0px 0px 10px 0;
+  padding: 0 0 10px 0;
 }
 #app .overlay .middle .content h2 {
   color: #000;
