--- a/uv/themes/uv-cy-GB-theme/css/uv-virtex-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-virtex-extension/theme.css
@@ -582,6 +582,37 @@
   width: 1px;
   background-color: #fff;
 }
+#oldie {
+  position: absolute;
+  margin-top: 0px !important;
+  margin-right: 0px !important;
+  margin-bottom: 0px !important;
+  margin-left: 0px !important;
+  font-family: sans-serif !important;
+  line-height: 18px !important;
+}
+#app .centerPanel a.imageBtn {
+  height: 28px;
+  width: 28px;
+  float: left;
+  cursor: pointer;
+}
+#app .centerPanel .content {
+  position: relative;
+}
+#app .centerPanel .content .navigation {
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  margin-left: 15px;
+}
+#app .centerPanel .content .navigation a.imageBtn.zoomIn {
+  background-image: url('../../img/uv-virtexcenterpanel-module/zoom_in.png');
+}
+#app .centerPanel .content .navigation a.imageBtn.zoomOut {
+  background-image: url('../../img/uv-virtexcenterpanel-module/zoom_out.png');
+}
 #app .centerPanel .content .virtex {
   background: none;
 }
