--- a/src/styles/_props.scss
+++ b/src/styles/_props.scss
@@ -1,6 +1,18 @@
-@use 'vars';
+@use 'sass:map';
+@use 'fn' as *;
+@use 'vars' as *;
 
 :root {
-  --uv-bg-color: #000;
-  --uv-header-bg-color: #111;
+  // COLORS
+  --uv-primary: #212;
+
+  // GENERIC
+  --uv-bg-color: var(--uv-primary);
+  --uv-header-bg-color: var(--uv-primary);
+
+  // MAIN NAV
+  --uv-main-nav-link-color: #eee;
+  --uv-main-nav-link-hover-bg-color: #000;
+
+  // HOMEPAGE
 }
